# Catalog-Project

./: .gitignore  README.md
Admin-PC/: main.py  requirements.txt
Admin-PC/backend/: alembic.ini  server.py
Admin-PC/backend/alembic/: env.py
Admin-PC/backend/alembic/versions/: 5fe1617eb8ad_empty.py  f66c185142cd_initial_migration.py
Admin-PC/pages/: accounts.py  history.py  home_page.py  tovari.py
Admin-PC/plugins/: apply_theme.py  card_styles.py  network.py  right_click.py
Android/: pyproject.toml  requirements.txt
Android/src/: bdinit.py  main.py
Android/src/backend/: back.db  last_sync.txt
Android/src/backend/SHABLON/: shablon.xlsx
Android/src/pages/: calculator.py  catalogue.py  home.py  tovari.py
Android/src/plugins/: theme_manager.py
